2011-03-15  Sancho Lerena <slerena@artica.es>

	* util/recon_scripts/snmpdevices.pl: Fixed a typo in interface
	detection :-(

2011-02-24  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/WMIServer.pm: Merged from trunk. Fixed a typo.

2011-02-23  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Merged from trunk. HTML encode events.

2011-02-22  Ramon Novoa  <rnovoa@artica.es>

	* pandora_server_installer: Merged from trunk. Change tentacle_server
	  permissions.

2011-02-22  Ramon Novoa  <rnovoa@artica.es>

	* DEBIAN/control, DEBIAN/make_deb_package.sh,
	  pandora_server.spec, lib/PandoraFMS/Config.pm: Updated version
	  strings.

2011-02-22  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed bug 3175575

2011-02-22  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/Tools.pm: Ported support of Android and Embedded
	devices from trunk.

	* DEBIAN/postinst: Fixed permissions on /incoming dirs for www-data
	
	* lib/PandoraFMS/Config.pm: Updated version.

2011-02-18  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Merged from trunk. Verify that there is a
	  data server running when computing server stats. Thanks to Tadashi
	  Kaneda.

2011-02-16  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DataServer.pm: Merged from trunk. Do not update the
	  module description if it's empty. Fixes bug #3162637.

2011-02-14  Junichi Satoh <junichi@rworks.jp>

	* util/pandora_manage.pl: Merged from trunk. Fixed invalid module
	id with creation of network module. Network module should be 2.

2011-02-08  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Tools.pm
	util/pandora_recode_db.pl: Added characters to translate
	to html entities into safe_input and safe_output. Clean
	repeated code into recode script.
	Merged from Trunk

2011-02-07  Sancho Lerena <slerena@artica.es>

	* pandora_server/DEBIAN/control,
	pandora_server/pandora_server.spec,
	pandora_server/pandora_server.redhat.spec: Added LWP dependency for